# fellow

./: README.md  requirements.txt  setup.cfg
fellow/: __main__.py
fellow/commands/: __init__.py
fellow/lib/: plugins.py
fellow/lib/modules/: bookmarks.py
fellow/plugins/: base.py  bookmarks.py
