[metadata]
name = fellow
home-page = https://github.com/4383/fellow/
summary = Personal CLI assistant
description-file = 
    README.md
author = Hervé Beraud
author-email = herveberaud.pro@gmail.com
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    fellow

[extras]
devel=
    fixtures
    pbr
    tox
    bandit

[entry_points]
console_scripts =
    fel = fellow.__main__:main

fellow.plugins = 
    bookmarks = fellow.plugins.bookmarks:Bookmarks

[wheel]
universal = 1
